--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Merriweather:wght@300;400;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meals app</title>
